--- a/candidate/templates/candidate/candidate_Home.html
+++ b/candidate/templates/candidate/candidate_Home.html
@@ -69,40 +69,40 @@
               <div class="form-group">
                 <a
                   class="btn btn-outline-primary mr-2 mt-2"
-                  href="/job/?p=software&q="
+                  href="/job/?query=software&q="
                   >Software</a
                 >
                 <a
                   class="btn btn-outline-info mr-2 mt-2"
-                  href="/job/?p=internship&q="
+                  href="/job/?query=internship&q="
                   >Internship</a
                 >
                 <a
                   class="btn btn-outline-danger mr-2 mt-2"
-                  href="/job/?p=product+manager&q="
+                  href="/job/?query=product+manager&q="
                   >Product Manager</a
                 >
                 <a
                   class="btn btn-outline-secondary mr-2 mt-2"
-                  href="/job/?p=python&q="
+                  href="/job/?query=python&q="
                   >Python</a
                 >
-                <a class="btn btn-outline-dark mr-2 mt-2" href="/job/?p=web&q="
+                <a class="btn btn-outline-dark mr-2 mt-2" href="/job/?query=web&q="
                   >Web</a
                 >
                 <a
                   class="btn btn-outline-danger mr-2 mt-2"
-                  href="/job/?p=android&q="
+                  href="/job/?query=android&q="
                   >Android</a
                 >
                 <a
                   class="btn btn-outline-success mr-2 mt-2"
-                  href="/job/?p=analyst&q="
+                  href="/job/?query=analyst&q="
                   >Analyst</a
                 >
                 <a
                   class="btn btn-outline-info mr-2 mt-2"
-                  href="/job/?p=sales&q="
+                  href="/job/?query=sales&q="
                   >Sales</a
                 >
               </div>
