--- a/candidate/templates/candidate/job_details.html
+++ b/candidate/templates/candidate/job_details.html
@@ -195,7 +195,7 @@
                                     <ul>
                                         <li>{{job.company}}</li>
                                         <li><i class="fas fa-map-marker-alt"></i>{{job.country.name}}</li>
-                                        <li>$3500 - $4000</li>
+                                        <li>{{job.salary}}&nbsp; LPA</li>
                                     </ul>
                                 </div>
                             </div>
@@ -216,6 +216,7 @@
                                     <h4>Required Knowledge, Skills, and Abilities</h4>
                                 </div>
                                <ul>
+                                   <li>{{job.skills}}</li>
                                    <li>System Software Development</li>
                                    <li>Mobile Applicationin iOS/Android/Tizen or other platform</li>
                                    <li>Research and code , libraries, APIs and frameworks</li>
@@ -247,32 +248,29 @@
                                <h4>Job Overview</h4>
                            </div>
                           <ul>
-                              <li>Posted date : <span>{{job.posted_At}}</span></li>
+                              <li>Posted date : <span>{{job.posted_at}}</span></li>
                               <li>Location : <span>{{job.country.name}}</span></li>
-                              <li>Vacancy : <span>{{job.no_Of_Opening}}</span></li>
+                              <li>Vacancy : <span>{{job.no_of_openings}}</span></li>
                               <li>Job nature : <span>{{job.type}}</span></li>
                               <li>Salary :  <span>{{job.salary}}&nbsp; LPA</span></li>
-                              <li>Application date : <span>12 Sep 2020</span></li>
-                          </ul>
-                         <div class="apply-btn2">
-                            <a href="#" class="btn">Apply Now</a>
-                            {% if not apply_button %} 
-          {% if profile.resume %}
+                              <li>Application date : <span>{{job.updated_at}}</span></li>
+                        
+        {% if not applied_button %} 
+      
           <a
             class="btn btn-warning btn-lg"
             href="{% url 'apply-job' job.slug %}"
             ><b>Apply Now</b></a
           >
-          {%else %}
-          <a class="btn btn-danger btn-lg" href="{% url 'edit-profile' %}"
-            ><b>Add Resume to apply!</b></a
-          >
-          {%endif%} {% else %}
+         
+          
+        {% else %}
+        
           <a class="btn btn-success btn-lg" href="{% url 'applied-jobs' %}"
             ><b>Applied!</b></a
           >
-          {% endif %} 
-           {% if not save_button %}
+        {% endif %}
+           {% if not saved_button %}
           <a
             class="btn btn-primary btn-lg ml-2"
             href="{% url 'save-job' job.slug %}"
@@ -293,10 +291,10 @@
                            <div class="small-section-tittle">
                                <h4>Company Information</h4>
                            </div>
-                              <span>Colorlib</span>
-                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                              <span>{{job.company}}</span>
+                              <p> {{job.about_company}}</p>
                             <ul>
-                                <li>Name: <span>Colorlib </span></li>
+                                <li>Name: <span>{{job.company}} </span></li>
                                 <li>Web : <span> colorlib.com</span></li>
                                 <li>Email: <span>carrier.colorlib@gmail.com</span></li>
                             </ul>
@@ -305,140 +303,39 @@
                 </div>
             </div>
         </div>
+        <hr my-1 />
+  <h3 class="text-center">Similar Jobs</h3>
+  <div class="row">
+    {% for rel_job in relevant_jobs %}
+    <div class="col-md-6">
+      <div class="card card-signin my-2">
+        <span class="ml-3 mt-3">
+          <a href="{% url 'job-details' rel_job.slug %}"
+            ><h4 class="text-dark">
+              <b>{{rel_job.title}} ({{rel_job.type}})</b>
+            </h4></a
+          >
+          <p style="font-size: 17px">
+            {{rel_job.company}}<br />{{rel_job.city}}
+          </p>
+          <p style="font-size: 15px">
+            {{rel_job.job_description|truncatewords:30}} -
+            <a href="{% url 'job-details' rel_job.slug %}">Read More</a>
+          </p>
+        </span>
+        <div class="card-footer">
+          <span style="font-size: 14px"
+            >Posted on {{rel_job.posted_at|date:"F d, Y"}}</span
+          >
+        </div>
+      </div>
+    </div>
+    {% endfor %}
         <!-- job post company End -->
 
     </main>
-    <footer>
-        <!-- Footer Start-->
-        <div class="footer-area footer-bg footer-padding">
-            <div class="container">
-                <div class="row d-flex justify-content-between">
-                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
-                       <div class="single-footer-caption mb-50">
-                         <div class="single-footer-caption mb-30">
-                             <div class="footer-tittle">
-                                 <h4>About Us</h4>
-                                 <div class="footer-pera">
-                                     <p>Heaven frucvitful doesn't cover lesser dvsays appear creeping seasons so behold.</p>
-                                </div>
-                             </div>
-                         </div>
-
-                       </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-                        <div class="single-footer-caption mb-50">
-                            <div class="footer-tittle">
-                                <h4>Contact Info</h4>
-                                <ul>
-                                    <li>
-                                    <p>Address :Your address goes
-                                        here, your demo address.</p>
-                                    </li>
-                                    <li><a href="#">Phone : +8880 44338899</a></li>
-                                    <li><a href="#">Email : info@colorlib.com</a></li>
-                                </ul>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-                        <div class="single-footer-caption mb-50">
-                            <div class="footer-tittle">
-                                <h4>Important Link</h4>
-                                <ul>
-                                    <li><a href="#"> View Project</a></li>
-                                    <li><a href="#">Contact Us</a></li>
-                                    <li><a href="#">Testimonial</a></li>
-                                    <li><a href="#">Proparties</a></li>
-                                    <li><a href="#">Support</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-                        <div class="single-footer-caption mb-50">
-                            <div class="footer-tittle">
-                                <h4>Newsletter</h4>
-                                <div class="footer-pera footer-pera2">
-                                 <p>Heaven fruitful doesn't over lesser in days. Appear creeping.</p>
-                             </div>
-                             <!-- Form -->
-                             <div class="footer-form" >
-                                 <div id="mc_embed_signup">
-                                     <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                                     method="get" class="subscribe_form relative mail_part">
-                                         <input type="email" name="email" id="newsletter-form-email" placeholder="Email Address"
-                                         class="placeholder hide-on-focus" onfocus="this.placeholder = ''"
-                                         onblur="this.placeholder = ' Email Address '">
-                                         <div class="form-icon">
-                                             <button type="submit" name="submit" id="newsletter-submit"
-                                             class="email_icon newsletter-submit button-contactForm"><img src="assets/img/icon/form.png" alt=""></button>
-                                         </div>
-                                         <div class="mt-10 info"></div>
-                                     </form>
-                                 </div>
-                             </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-               <!--  -->
-               <div class="row footer-wejed justify-content-between">
-                       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
-                          <!-- logo -->
-                          <div class="footer-logo mb-20">
-                            <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
-                          </div>
-                       </div>
-                       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-                        <div class="footer-tittle-bottom">
-                            <span>5000+</span>
-                            <p>Talented Hunter</p>
-                        </div>
-                       </div>
-                       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-                            <div class="footer-tittle-bottom">
-                                <span>451</span>
-                                <p>Talented Hunter</p>
-                            </div>
-                       </div>
-                       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-                            <!-- Footer Bottom Tittle -->
-                            <div class="footer-tittle-bottom">
-                                <span>568</span>
-                                <p>Talented Hunter</p>
-                            </div>
-                       </div>
-               </div>
-            </div>
-        </div>
-        <!-- footer-bottom area -->
-        <div class="footer-bottom-area footer-bg">
-            <div class="container">
-                <div class="footer-border">
-                     <div class="row d-flex justify-content-between align-items-center">
-                         <div class="col-xl-10 col-lg-10 ">
-                             <div class="footer-copy-right">
-                                 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                             </div>
-                         </div>
-                         <div class="col-xl-2 col-lg-2">
-                             <div class="footer-social f-right">
-                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                 <a href="#"><i class="fab fa-twitter"></i></a>
-                                 <a href="#"><i class="fas fa-globe"></i></a>
-                                 <a href="#"><i class="fab fa-behance"></i></a>
-                             </div>
-                         </div>
-                     </div>
-                </div>
-            </div>
-        </div>
-        <!-- Footer End-->
-    </footer>
+          </div>
+                     
 
 	<!-- JS here -->
 	
