--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -189,6 +189,15 @@
     <form class="registration" action= "{% url 'login' %}"  method="POST">
       {% csrf_token %}
       <h1>👋 Welcome Back !</h1>
+      {% if messages %}
+  <div class="alert alert-danger">
+    <ul class="mb-0">
+      {% for message in messages %}
+        <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+{% endif %}
     
   
       
