--- a/candidate/templates/candidate/home.html
+++ b/candidate/templates/candidate/home.html
@@ -602,8 +602,8 @@ font-display: block;
 
 
 
-<a href="{% url 'signup' %}?user_type=employee " ><button type="button" class="btn btn-warning" >Find Job!</button></a>
-<a href="{% url 'signup' %}?user_type=employer" > <button type="button" class="btn btn-warning" >Post Job!</button></a>
+<a href="{% url 'signup' %}?user_type=employee " ><button type="button" class="btn btn-warning" >Register As A JobSeeker!</button></a>
+<a href="{% url 'signup' %}?user_type=employer" > <button type="button" class="btn btn-warning" >Register As A Employer!</button></a>
 <a href="{% url 'login' %}"><button type="button" class="btn btn-warning">Login</button></a>
 
 
