--- a/recruiter/templates/recruiter/candidate_search.html
+++ b/recruiter/templates/recruiter/candidate_search.html
@@ -41,7 +41,7 @@
     <div class="col-md-4">
       <div class="card card-signin my-2">
         <span class="ml-3 mt-3">
-     <a href="{% url 'profile-view' profile.slug %}"> 
+     <a href="{% url 'profile-view' profile.pk %}"> 
             
             <h4 class="text-dark">
               <b>{{profile.first_name}}</b>
