--- a/candidate/templates/candidate/profile.html
+++ b/candidate/templates/candidate/profile.html
@@ -32,7 +32,7 @@
           <a href="{% url 'edit-profile' %}">
             <button type="button" class="btn btn-success btn-xs waves-effect mb-2 waves-light" >Edit</button>
         </a>
-            <button type="button" class="btn btn-danger btn-xs waves-effect mb-2 waves-light">Message</button>
+            {% comment %} <button type="button" class="btn btn-danger btn-xs waves-effect mb-2 waves-light">Message</button> {% endcomment %}
           
             <div class="text-left mt-3">
                 <h4 class="font-13 text-uppercase">About Me :</h4>
@@ -49,7 +49,7 @@
           {% endif %}
                
 
-                <p class="text-muted mb-2 font-13"><strong>Email :</strong> <span class="ml-2 ">{{i.email}}</span></p>
+                <p class="text-muted mb-2 font-13"><strong>Email :</strong> <span class="ml-2 ">{{user.email}}</span></p>
 
             <p class="text-muted mb-1 font-13"><strong>Location :</strong> <span class="ml-2">{{data.location}},{{data.country.name}}</span></p>
             <p class="text-muted mb-2 font-13"><strong>Looking For :</strong> <span class="ml-2 ">{{data.looking_for}}</span></p>
