--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -192,6 +192,13 @@
   <form class="registration" action="{% url 'signup' %}" method="POST">
   {% csrf_token %} 
     <h1>👋 Welcome!</h1>
+    {% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+      <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+  </ul>
+{% endif %}
   
 
     <label class="pure-material-textfield-outlined">
